<resources>
    <string name="app_name">KalamTime</string>
    <string name="hello_dagger">Hello Dagger</string>
    <string name="welcome_to_kalam">Welcome to KalamTime</string>
    <string name="select_country_code">Please select your country code and \n enter your phone number</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="next">Next</string>
    <string name="finished">Finished</string>
    <string name="verify">Verify me</string>
    <string name="resend_code">Resend Code</string>
    <string name="update_profile">Upload your profile</string>
    <string name="six_digit_code">Please enter the six digit code</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="username">Username</string>
    <string name="email_address">Email address</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome">Welcome Ali \n Have a start your KalamTime</string>
    <string name="phone_username">Phone number</string>
    <string name="password">Password</string>
    <string name="forget_pass">Forgot Password?</string>
    <string name="tap_login">Tap \"Login\" to accept the KalamTime Terms of \n Services and Privacy Policy.</string>
    <string name="kalam_terms">KalamTime Terms of \n Services and Privacy Policy.</string>
    <string name="login">Login</string>
    <string name="signup">Don\'t have an account SignUp</string>
    <string name="signup_sub">SignUp</string>
    <string name="login_world_noor">Login with World Noor</string>
    <string name="world_noor">World Noor</string>
    <string name="dialoge_text">Please wait! This may take a moment.</string>
    <string name="labelNewGroup">New group</string>
    <string name="labelNewContact">New contact</string>
    <string name="labelBack">Back</string>
    <string name="msgForResetPassword">Enter your email address to reset \n your password</string>
    <string name="hintEmailAddress">Email Address</string>
    <string name="labelSubmit">Submit</string>
    <string name="no_chat">There is currently no chat, Start chatting by clicking compose button </string>
    <string name="invite_text">Check out KalamTime, I use it to message and call the people I care about. Get it for free</string>
    <string name="slide_to_cancel">Slide to cancel</string>
    <string name="labelChangeLng">Select Language</string>
    <string name="settings">Settings</string>
    <string name="labelAbout">About</string>
    <string name="labelTermCondition"><![CDATA[Terms & Condition]]></string>
    <string name="labelPrivacyPolicy">Privacy Policy</string>
    <string name="labelEnglish">English</string>
    <string name="labelArabic">Arabic</string>
    <string name="selectAuto">Auto Translate</string>
    <string name="typing">typing…</string>

    <string name="file">File</string>
    <string name="gallery">Gallery</string>
    <string name="location">Location</string>
    <string name="audio">Audio</string>
    <string name="contacts">Contact</string>
    <string name="search_hint">Search</string>
    <string name="trans_key">image</string>
    <string name="profile_trans">profile</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="labelFindFriends">Find Friends</string>
    <string name="labelSearch">Search</string>
    <string name="labelMobile">Mobile</string>
    <string name="labelBlock">Block</string>
    <string name="labelReport">Report contact</string>

    <string name="notifications_admin_channel_name">com.example.kalam_android</string>
    <string name="notifications_admin_channel_description">Kalam Firebase PushNotification</string>
    <string name="labelFile">File</string>
    <string name="labelContacts">Contacts</string>
    <string name="labelImageVideo">Img/video</string>
    <string name="labelAudio">Audio</string>
    <string name="labelLocation">Location</string>
    <string name="labelMyStatus">My Status</string>
    <string name="speech_prompt">Speak now</string>
    <string name="speech_not_supported">Your device does not support speech</string>
    <string name="labelDone">Done</string>
    <string name="crash_report">Find a crash</string>
    <string name="labelOverview">Overview</string>
    <string name="labelPhotos">Photos</string>
    <string name="labelVideos">Videos</string>
    <string name="labelAddress">Address :</string>
    <string name="labelPhone">Phone :</string>
    <string name="labelEmail">Email :</string>
    <string name="labelFax">Fax :</string>
    <string name="labelWebsite">Website</string>
    <string name="labelInterest">Interested in :</string>
    <string name="labelMarried">Married :</string>
    <string name="labelWork">Work :</string>
    <string name="labelEducation">Education :</string>
    <string name="labelSave">Save</string>
    <string name="labelCountry">Country :</string>
    <string name="labelCity">City</string>
    <string name="labelSelectCountry">Select Country</string>
    <string name="labelSelectCity">Select City</string>
    <string name="labelAddPeople">Add People</string>
    <string name="labelEditProfile">Edit Profile</string>
    <string name="type_group_name">Type Group Name</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyA98PlJT-cGnaa8HunAG7Sdkyvjg3gUkoM
    </string>
    <string-array name="listStatus">
        <item>Select Status</item>
        <item>Single</item>
        <item>Married</item>
    </string-array>
    <string-array name="listInterest">
        <item>Select Interest</item>
        <item>Food,Music,Movie</item>
        <item>Movie,Tv Shows</item>
        <item>Traveling</item>
    </string-array>
</resources>
