<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activities.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvChangeLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/halvatic_light"
            android:gravity="center_vertical"
            android:padding="@dimen/_15sdp"
            android:text="@string/labelChangeLng"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/light_grey" />
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/halvatic_light"
            android:gravity="center_vertical"
            android:padding="@dimen/_15sdp"
            android:text="@string/labelPrivacyPolicy"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/light_grey" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/halvatic_light"
            android:gravity="center_vertical"
            android:padding="@dimen/_15sdp"
            android:text="@string/labelTermCondition"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/light_grey" />
        <TextView
            android:id="@+id/tvAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/halvatic_light"
            android:gravity="center_vertical"
            android:padding="@dimen/_15sdp"
            android:text="@string/labelAbout"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/light_grey" />

    </LinearLayout>
</layout>