<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_170sdp">

        <ImageView
            android:id="@+id/ivUserProfile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_130sdp"
            android:src="@color/darkGrey"
            android:scaleType="fitXY" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfile"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_130sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:transitionName="@string/profile_trans"
            app:civ_border_color="@color/white"
            android:src="@color/darkGrey"
            app:civ_border_width="@dimen/_1sdp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvName"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/darkGrey"
            android:textSize="@dimen/_13ssp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:weightSum="4">

        <TextView
            android:id="@+id/tvOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_regular"
            android:padding="@dimen/_5sdp"
            android:text="@string/labelOverview"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/tvPhotos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_regular"
            android:padding="@dimen/_5sdp"
            android:text="@string/labelPhotos"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/tvVideos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_regular"
            android:padding="@dimen/_5sdp"
            android:text="@string/labelVideos"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp" />
    </LinearLayout>

</LinearLayout>