<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/white_box_outine"
        android:fontFamily="@font/roboto_regular"
        android:maxLines="8"
        android:padding="@dimen/_10sdp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:cardElevation="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.60"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/labelAddress"
                    android:textColor="@color/theme_color"
                    android:textSize="@dimen/_13ssp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:background="@drawable/white_box_outine"
                    android:fontFamily="@font/roboto_regular"
                    android:maxLines="1"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/labelCountry"
                    android:textColor="@color/theme_color"
                    android:textSize="@dimen/_13ssp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:background="@drawable/white_box_outine"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        android:id="@+id/tvCountry"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/labelSelectCountry"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/labelCity"
                    android:textColor="@color/theme_color"
                    android:textSize="@dimen/_13ssp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:background="@drawable/white_box_outine"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        android:id="@+id/tvCity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/labelSelectCity"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/labelPhone"
                    android:textColor="@color/theme_color"
                    android:textSize="@dimen/_13ssp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:background="@drawable/white_box_outine"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/labelFax"
                    android:textColor="@color/theme_color"
                    android:textSize="@dimen/_13ssp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etFax"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:background="@drawable/white_box_outine"
                    android:fontFamily="@font/roboto_regular"
                    android:maxLines="2"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/labelEmail"
                    android:textColor="@color/theme_color"
                    android:textSize="@dimen/_13ssp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:background="@drawable/white_box_outine"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/labelWebsite"
                    android:textColor="@color/theme_color"
                    android:textSize="@dimen/_13ssp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etWebsite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:background="@drawable/white_box_outine"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="textWebEditText"
                    android:maxLines="1"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/labelInterest"
                    android:textColor="@color/theme_color"
                    android:textSize="@dimen/_13ssp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:background="@drawable/white_box_outine"
                    android:padding="@dimen/_5sdp">

                    <Spinner
                        android:id="@+id/spInterest"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:entries="@array/listInterest"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/labelMarried"
                    android:textColor="@color/theme_color"
                    android:textSize="@dimen/_13ssp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:background="@drawable/white_box_outine"
                    android:padding="@dimen/_5sdp">

                    <Spinner
                        android:id="@+id/spStatus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:entries="@array/listStatus" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/labelWork"
                    android:textColor="@color/theme_color"
                    android:textSize="@dimen/_13ssp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etWork"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:background="@drawable/white_box_outine"
                    android:fontFamily="@font/roboto_regular"
                    android:maxLines="1"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/labelEducation"
                    android:textColor="@color/theme_color"
                    android:textSize="@dimen/_13ssp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etEducation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:background="@drawable/white_box_outine"
                    android:fontFamily="@font/roboto_regular"
                    android:maxLines="2"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>